stylish theme in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,96 +1,41 @@
-<!--The whole content below can be removed with the new code.-->
-<!--<nav class="navbar navbar-toggleable-md navbar fixed-top">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
-    aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  <a class="navbar-brand" href="#"><img src="assets/img/franka/a_logo5.jpg" class="img rounded-circle" /></a>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Hem <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Kontakt</a>
-      </li>
-    </ul>
-  </div>
-</nav>-->
+<app-nav>
 
-<!--<section class="jumbotron text-center">
-  <div class="container">
-    <h1 class="jumbotron-heading text-uppercase">Annika Johnsson</h1>
-    <p class="small text-muted">Art Director / Franka Design</p>
-    <div>
-      <ul class="list-inline">
-        <li class="list-inline-item">
-          <a href="#"><i class="fa fa-instagram"><span></span></i></a>
-        </li>
-        <li class="list-inline-item">
-          <a href="#"><i class="fa fa-linkedin"><span></span></i></a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</section>-->
-<app-nav></app-nav>
+</app-nav>
 <app-header></app-header>
+<!--<app-about></app-about>-->
+<!--<app-services></app-services>-->
 
-<div class="album text-muted">
-  <div class="container">
 
-    <div class="row no-gutters" id="portfolio">
-      <div class="card">
-        <img class="img-fluid" src="assets/img/franka/portfolio/1_The_Good_Life.jpg" alt="Card image cap">
-        <div class="card-img-overlay">
-          <p class="card-text">Aftonbladet – The Good Life</p>
+
+
+
+<!-- Callout -->
+<!--<aside class="callout">
+        <div class="text-vertical-center">
+            <h1>Vertically Centered Text</h1>
         </div>
-      </div>
-      <div class="card">
-        <img src="assets/img/franka/portfolio/2_Coop_skonhet.jpg" alt="Card image cap">
-        <div class="card-img-overlay">
-          <p class="card-text">Coop Skönhet & Hälsa</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="assets/img/franka/portfolio/3_Aftonbladet_Resa.jpg" alt="Card image cap">
-        <div class="card-img-overlay">
-          <p class="card-text">Aftonbladet Resa</p>
-        </div>
-      </div>
+    </aside>-->
 
-      <div class="card">
-        <img src="assets/img/franka/portfolio/4_HM_annual-report.jpg" alt="Card image cap">
-        <div class="card-img-overlay">
-          <p class="card-text">H&M Annual Report</p>
+<app-portfolio></app-portfolio>
+
+<!-- Call to Action -->
+<!--<aside class="call-to-action bg-primary text-white">
+        <div class="container text-center">
+            <h3>The buttons below are impossible to resist.</h3>
+            <a href="#" class="btn btn-lg btn-light">Click Me!</a>
+            <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
         </div>
-      </div>
-      <div class="card">
-        <img src="assets/img/franka/portfolio/5_HM_Sustainability_Report.jpg" alt="Card image cap">
-        <div class="card-img-overlay">
-          <p class="card-text">H&M Sustainability Report</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="assets/img/franka/portfolio/6_Tidningen_Vi1.jpg" alt="Card image cap">
-        <div class="card-img-overlay">
-          <p class="card-text">Tidningen Vi</p>
-        </div>
-      </div>
+    </aside>-->
 
+<!-- Map -->
+<section id="contact" class="map">
+  <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2035.6430332027655!2d18.070371351317796!3d59.32221751854526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f77e32569fb03%3A0x551e0151b2c974a9!2sKornhamnstorg+61%2C+111+27+Stockholm%2C+Sverige!5e0!3m2!1ssv!2sus!4v1496687490902"></iframe>
+  <br />
+  <small>
+            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
+            
+        </small>
+  <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2035.6430332027655!2d18.070371351317796!3d59.32221751854526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f77e32569fb03%3A0x551e0151b2c974a9!2sKornhamnstorg+61%2C+111+27+Stockholm%2C+Sverige!5e0!3m2!1ssv!2sus!4v1496687490902" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+</section>
 
-    </div>
-
-  </div>
-</div>
-
-<footer class="text-muted">
-  <div class="container">
-    <p class="float-right">
-      <a href="#">Back to top</a>
-    </p>
-    <p>
-      <strong>&copy; Franka Design</strong>
-    </p>
-  </div>
-</footer>
+<app-footer></app-footer>
