--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,10 @@
-<section class="jumbotron text-center">
-  <div class="container">
-    <h1 class="jumbotron-heading text-uppercase">Annika Johnsson</h1>
-    <p class="small text-muted text-lowercase">Art Director / Franka Design</p>
-    <div>
-      <ul class="list-inline">
-        <li class="list-inline-item">
-          <a href="#"><i class="fa fa-instagram"><span></span></i></a>
-        </li>
-        <li class="list-inline-item">
-          <a href="#"><i class="fa fa-linkedin"><span></span></i></a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</section>
+    <!-- Header -->
+    <header class="header" id="top">
+        <div class="text-vertical-center">
+            <!--<h1>Franka Design</h1>-->
+            <img class="img-fluid rounded-circle" src="assets/img/franka/a_logo5.jpg" />
+            <h2>Annika Johnsson – Art Director</h2>
+            <br>
+            <a href="#about" class="page-scroll btn btn-dark btn-lg">Find Out More</a>
+        </div>
+    </header>
