--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,20 +1,25 @@
-<nav class="navbar navbar-toggleable-md navbar fixed-top">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
-    aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  <a class="navbar-brand" href="#"><img src="assets/img/franka/a_logo5.jpg" class="img rounded-circle" /></a>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Hem <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Kontakt</a>
-      </li>
-      <!--<li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>-->
-    </ul>
-  </div>
-</nav>
+    <!-- Navigation -->
+    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
+    <nav id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+            <li class="sidebar-brand">
+                <a href="#top" >Start Bootstrap</a>
+            </li>
+            <li>
+                <a href="#top" >Home</a>
+            </li>
+            <li>
+                <a href="#about" >About</a>
+            </li>
+            <li>
+                <a href="#services" >Services</a>
+            </li>
+            <li>
+                <a href="#portfolio" >Portfolio</a>
+            </li>
+            <li>
+                <a href="#contact" >Contact</a>
+            </li>
+        </ul>
+    </nav>
