--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,220 +3,231 @@
 <app-header></app-header>
 
 
-
- <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+<section class="no-padding" id="portfolio">
+  <div class="container-fluid">
+    <div class="row no-gutter popup-gallery">
+      <div class="col-lg-4 col-sm-6">
+        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
+          <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="">
+          <div class="portfolio-box-caption">
+            <div class="portfolio-box-caption-content">
+              <div class="project-category text-faded">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
             </div>
-        </div>
-    </section>
-
-
-
- <!-- Page Content -->
-    <section class="content-section-a">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
-                </div>
-                <div class="col-lg-5 offset-lg-2">
-                    <img class="img-fluid" src="assets/img/ipad.png" alt="">
-                </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg">
+          <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="">
+          <div class="portfolio-box-caption">
+            <div class="portfolio-box-caption-content">
+              <div class="project-category text-faded">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
             </div>
-
-        </div>
-        <!-- /.container -->
-    </section>
-
-    <section class="content-section-b">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 push-lg-7">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
-                </div>
-                <div class="col-lg-5 pull-lg-5">
-                    <img class="img-fluid" src="assets/img/dog.png" alt="">
-                </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
+          <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="">
+          <div class="portfolio-box-caption">
+            <div class="portfolio-box-caption-content">
+              <div class="project-category text-faded">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
             </div>
-
-        </div>
-        <!-- /.container -->
-
-    </section>
-    <!-- /.content-section-b -->
-
-    <section class="content-section-a">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
-                </div>
-                <div class="col-lg-5 offset-lg-2">
-                    <img class="img-fluid" src="assets/img/phones.png" alt="">
-                </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
+          <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="">
+          <div class="portfolio-box-caption">
+            <div class="portfolio-box-caption-content">
+              <div class="project-category text-faded">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
             </div>
-
-        </div>
-        <!-- /.container -->
-
-    </section>
-    <!-- /.content-section-a -->
-
-    <aside class="banner">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Kontakt:</h2>
-                </div>
-                <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">  
-                        <li class="list-inline-item">
-                            <a href="https://www.instagram.com/annikajohnsson/" target="_blank" class="btn btn-secondary btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://www.linkedin.com/in/annikajohnsson/" target="_blank" class="btn btn-secondary btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
-                    </ul>
-                </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
+          <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="">
+          <div class="portfolio-box-caption">
+            <div class="portfolio-box-caption-content">
+              <div class="project-category text-faded">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
             </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
+          <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="">
+          <div class="portfolio-box-caption">
+            <div class="portfolio-box-caption-content">
+              <div class="project-category text-faded">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
 
-        </div>
-        <!-- /.container -->
 
-    </aside>
-    <!-- /.banner -->
+<!-- Page Content -->
+<section class="content-section-a">
 
-    
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-5">
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+        <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
+        <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the
+          Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a
+          member.</p>
+      </div>
+      <div class="col-lg-5 offset-lg-2">
+        <img class="img-fluid" src="assets/img/ipad.png" alt="">
+      </div>
+    </div>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <ul class="list-inline">
-                <li class="list-inline-item">
-                    <a href="#">Home</a>
-                </li>
-                <li class="footer-menu-divider list-inline-item">&sdot;</li>
-                <li class="list-inline-item">
-                    <a href="#about">About</a>
-                </li>
-                <li class="footer-menu-divider list-inline-item">&sdot;</li>
-                <li class="list-inline-item">
-                    <a href="#services">Services</a>
-                </li>
-                <li class="footer-menu-divider list-inline-item">&sdot;</li>
-                <li class="list-inline-item">
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-            <p class="copyright text-muted small">Copyright &copy; Your Company 2017. All Rights Reserved</p>
-        </div>
-    </footer>
+  </div>
+  <!-- /.container -->
+</section>
+
+<section class="content-section-b">
+
+  <div class="container">
+
+    <div class="row">
+      <div class="col-lg-5 push-lg-7">
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+        <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
+        <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions
+          by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of
+          their awesome, free photoshop actions!</p>
+      </div>
+      <div class="col-lg-5 pull-lg-5">
+        <img class="img-fluid" src="assets/img/dog.png" alt="">
+      </div>
+    </div>
+
+  </div>
+  <!-- /.container -->
+
+</section>
+<!-- /.content-section-b -->
+
+<section class="content-section-a">
+
+  <div class="container">
+
+    <div class="row">
+      <div class="col-lg-5">
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+        <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
+        <p class="lead">This template features the 'Lato' font, part of the <a target="_blank"
+                                                                               href="http://www.google.com/fonts">Google
+          Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.
+        </p>
+      </div>
+      <div class="col-lg-5 offset-lg-2">
+        <img class="img-fluid" src="assets/img/phones.png" alt="">
+      </div>
+    </div>
+
+  </div>
+  <!-- /.container -->
+
+</section>
+<!-- /.content-section-a -->
+
+<aside class="banner">
+
+  <div class="container">
+
+    <div class="row">
+      <div class="col-lg-6">
+        <h2>Kontakt:</h2>
+      </div>
+      <div class="col-lg-6">
+        <ul class="list-inline banner-social-buttons">
+          <li class="list-inline-item">
+            <a href="https://www.instagram.com/annikajohnsson/" target="_blank" class="btn btn-secondary btn-lg"><i
+              class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.linkedin.com/in/annikajohnsson/" target="_blank" class="btn btn-secondary btn-lg"><i
+              class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+  <!-- /.container -->
+
+</aside>
+<!-- /.banner -->
+
+
+<!-- Footer -->
+<footer>
+  <div class="container">
+    <ul class="list-inline">
+      <li class="list-inline-item">
+        <a href="#">Home</a>
+      </li>
+      <li class="footer-menu-divider list-inline-item">&sdot;</li>
+      <li class="list-inline-item">
+        <a href="#about">About</a>
+      </li>
+      <li class="footer-menu-divider list-inline-item">&sdot;</li>
+      <li class="list-inline-item">
+        <a href="#services">Services</a>
+      </li>
+      <li class="footer-menu-divider list-inline-item">&sdot;</li>
+      <li class="list-inline-item">
+        <a href="#contact">Contact</a>
+      </li>
+      <li class="footer-menu-divider list-inline-item">&sdot;</li>
+      <li class="list-inline-item">
+
+        {{environment}}
+      </li>
+    </ul>
+    <p class="copyright text-muted small">Copyright &copy; Your Company 2017. All Rights Reserved</p>
+  </div>
+</footer>
 
 
