tokens on env.prod.ts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -223,7 +223,7 @@
       <li class="footer-menu-divider list-inline-item">&sdot;</li>
       <li class="list-inline-item">
 
-        {{environment}}
+        {{environment}}-{{buildNumber}}
       </li>
     </ul>
     <p class="copyright text-muted small">Copyright &copy; Your Company 2017. All Rights Reserved</p>
